[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/Linebeam/Linebeam.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/aldo_the_apache/AldotheApache.tres" type="DynamicFont" id=2]
[ext_resource path="res://Credits/Credits.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/aldo_the_apache/AldotheApache.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 1
outline_color = Color( 0.976471, 0, 0.847059, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "SceneTransition"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("SceneTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 6 )
text = "Credits"
align = 1
valign = 1

[node name="Nooh" type="LinkButton" parent="."]
margin_left = 40.0
margin_top = 144.0
margin_right = 308.0
margin_bottom = 175.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.639216, 1, 1 )
text = "Nooh - Programming, game design, additional art"
underline = 1

[node name="Grumpo" type="LinkButton" parent="."]
margin_left = 232.0
margin_top = 272.0
margin_right = 490.0
margin_bottom = 286.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
text = "GrumpoPotatmus - Art, Game design"
underline = 1

[node name="Nishy" type="LinkButton" parent="."]
margin_left = 40.0
margin_top = 424.0
margin_right = 236.0
margin_bottom = 438.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Prod. Nishy - Music"
underline = 1

[node name="BackButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 544.0
margin_right = 147.0
margin_bottom = 564.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_hover = Color( 0.94902, 0.94902, 0.94902, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "<- Return to Menu"
flat = true

[node name="SceneTransition" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SceneTransition"
anims/SceneTransition = SubResource( 5 )
[connection signal="pressed" from="Nooh" to="." method="_on_Nooh_pressed"]
[connection signal="pressed" from="Nishy" to="." method="_on_Nishy_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
